--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -794,6 +794,27 @@
   keywords = {Environmentally-friendly vehicles,Low emissions zone,Parking,Sustainable modes}
 }
 
+@misc{GouvernementduQuebec:CodesUtilisation:,
+  title = {{Codes d'utilisation des biens-fonds des unit{\'e}s d'{\'e}valuation fonci{\`e}re}},
+  author = {{Gouvernement du Qu{\'e}bec}},
+  journal = {Gouvernement du Qu{\'e}bec},
+  urldate = {2024-07-26},
+  abstract = {Les codes d'utilisation des biens-fonds permettent l'identification de fa{\c c}on uniforme de l'utilisation de chacune des unit{\'e}s d'{\'e}valuation.},
+  howpublished = {https://www.quebec.ca/habitation-territoire/information-fonciere/evaluation-fonciere/manuel/codes-utilisation-biens-fonds},
+  langid = {french},
+  file = {C:\Users\paulc\Zotero\storage\4688QLEH\codes-utilisation-biens-fonds.html}
+}
+
+@techreport{GouvernementduQuebec:ManuelEvaluation:2024,
+  title = {{Manuel d'{\'e}valuation fonci{\`e}re du Qu{\'e}bec -- {\'E}dition 2024}},
+  author = {{Gouvernement du Qu{\'e}bec}},
+  year = {2024},
+  pages = {2370},
+  institution = {Biblioth{\`e}que et Archives nationales du Qu{\'e}bec},
+  langid = {french},
+  file = {C:\Users\paulc\Zotero\storage\CIZRZTFB\Manuel d'évaluation foncière du Québec – Édition 2.pdf}
+}
+
 @article{Guo:DoesResidential:2013,
   title = {Does Residential Parking Supply Affect Household Car Ownership? {{The}} Case of {{New York City}}},
   shorttitle = {Does Residential Parking Supply Affect Household Car Ownership?},
