--- a/4-Sigles_Abrev.tex
+++ b/4-Sigles_Abrev.tex
@@ -20,6 +20,7 @@
   \acro{ReLu}{Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}}
   \acro{OQLF}{Office Québecois de la Langue Française}
   \acro{CDS}{Coefficient de Dice Sorensen}
+  \acro{CUBF}{Code d'Utilisation du Bien Fond}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
@@ -34,5 +35,6 @@ mIoU & mean Intersection over Union ou indice de Jaccard moyen\\
 ReLu & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}\\
 OQLF & Office Québecois de la Langue Française\\
 CDS & Coefficient de Dice Sorensen \\
+CUBF & Code d'Utilisation des Biens-Fonds \\
 \end{longtable}
 
